crates/plotnik-lib/tests/04-emit/definitions/ref_atomic_child_impossible.txt
Impossible = (binary_expression
  right: (_)
  left: (_)
)

Q = (program (expression_statement (Impossible) @expr))
------------------ DIAGNOSTICS -------------------
error: the grammar places `left:` before `right:` in `binary_expression`
 --> query.ptk:2:3
  |
1 | Impossible = (binary_expression
  |               ----------------- inside `binary_expression`
2 |   right: (_)
  |   ^^^^^^^^^^
3 |   left: (_)
  |   --------- `left:` must come before `right:`
  |
help: write `left:` before `right:`
